--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "twig/twig": "^3.0",
         "vlucas/phpdotenv": "^5.6",
         "ramsey/uuid": "^4.7",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "components/font-awesome": "^6.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^11"
